Fixed scrollbar

--- a/css/portfolio_design.css
+++ b/css/portfolio_design.css
@@ -74,5 +74,5 @@ body {
 }
 
  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: rgb(151, 151, 151);
 }
